# visual_textual_frames_anger

./: .gitignore  README.md
docs/: 2026_AEJMC_全文中译.md  advanced_analysis_report.md  analysis_report.md  basic_analysis_report.md  source_inventory.md
scripts/: README.md
scripts/crawler/: .env.example  README_crawler.md  pyproject.toml
scripts/crawler/app/: __init__.py
scripts/crawler/app/api/: main.py  schemas.py  serializers.py
scripts/crawler/app/cli/: main.py
scripts/crawler/app/core/: config.py  enums.py  errors.py
scripts/crawler/app/services/: accounts.py  circuit_breaker.py  fallback.py  jobs.py  login_state.py  proxies.py  proxy_sources.py  registry.py  snapshots.py  topic_curation.py  video_downloads.py
scripts/crawler/app/storage/: models.py  session.py
scripts/crawler/app/workers/: __init__.py  paper_style_polarization.py  sentiment_polarization.py
scripts/crawler/crawler_deploy/: bootstrap_remote.sh  deploy_to_remote.sh  short-video-crawler.service
scripts/crawler/scripts/: backfill_keep_zero_comments.py  curate_topic_videos.py  download_final_keep_videos.py  run_keyword_batch.py
scripts/crawler/templates/: dashboard.html
scripts/crawler/tests/: test_backfill_keep_zero_comments.py  test_circuit_breaker.py  test_download_final_keep_videos.py  test_job_service.py  test_login_state.py  test_normalizers.py  test_paper_style_polarization.py  test_playwright_provider.py  test_proxy_management.py  test_proxy_sources.py  test_sentiment_polarization.py  test_time_filter_and_snapshots.py  test_topic_curation.py  test_video_downloads.py
(+78 files in other folders)
