[project]
name = "short-video-crawler"
version = "0.1.0"
description = "Douyin-first short video crawler with API, CLI, and simple dashboard."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.36",
  "pymysql>=1.1.1",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.1",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.12",
  "typer>=0.12.5",
  "httpx>=0.27.2",
  "playwright>=1.48.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
